@startuml

title __ISENCEPAY.APP's Class Diagram__\n

  namespace com.google.isencepay {
    class com.google.isencepay.BuildConfig {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.First {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.History {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.Home {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.MainActivity {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.NewVehicle {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.Offences {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.Profile {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.ReminderDetails {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.Reminders {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.VehicleProfile {
    }
  }
  

  namespace com.google.isencepay {
    class com.google.isencepay.Vehicles {
    }
  }
  

  com.google.isencepay.First -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isencepay.History -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isencepay.Home -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isencepay.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isencepay.NewVehicle -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isencepay.Offences -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isencepay.Profile -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isencepay.ReminderDetails -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isencepay.Reminders -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isencepay.VehicleProfile -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isencepay.Vehicles -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
